2006-04-25  Jeremy Cribb <jcribb@email.unc.edu>
	* DACoperator.m: added newline to end of daqtest output.

2006-04-19	Kalpit Desai <kvdesai@email.unc.edu>
	* teststreaks.m: Removed the code that asked to save the data. It wasn't being used ever, and was annoying. Fixed documentation.

2005-10-03	Kalpit Desai <kvdesai@email.unc.edu>
	* teststreaks.m: Fixed old comments.
2005-10-03	Kalpit Desai <kvdesai@email.unc.edu>
	* teststreaks.m: Added utility for testing streaks on camera by moving MCL stage.
2005-09-24	Kalpit Desai <kvdesai@email.unc.edu>
	* ADCnoisechar.m: A utility to chracterize noise in the data acquisition path.
2005-09-16  Jeremy Cribb <jcribb@email.unc.edu>
	* zerodaq.m:  added.  with no arguments, it zeros daq boards.  With an argument it sets the board output to a DC value.

2005-02-18  Jeremy Cribb <jcribb@email.unc.edu>
	* DACoperator.m: made output plots more readable.

2005-02-05  Jeremy Cribb <jcribb@email.unc.edu>
	* DACoperator.m: fixed voltage-clipping functionality.  If you attempt to put a voltage outside of the prescribed range, DACoperator clips it.

2005-1-10  Kalpit Desai <kvdesai@cs.unc.edu>
	* added file stagenoisechar.m - a stand alone utility to characterize the noise on stage sensor outputs.

2004-12-18  Jeremy Cribb <jcribb@email.unc.edu>
	* DACoperator.m: weird errors when comparing strings with strfind.  switched to strcmp.  works better now.

2004-12-08  Jeremy Cribb <jcribb@email.unc.edu>
	* DACoperator.m: fixed a bug in if-block.

2004-10-31  Jeremy Cribb <jcribb@email.unc.edu>
	* DACoperator.m: fixed some syntax errors, enhanced documentation, and added a 'daqtest' DAq board type so that you can simulate DAQ AO runs on a non-DAQ enabled PC.

2004-05-18  Jeremy Cribb <jcribb@email.unc.edu>

	* Initial Version
