@@ -2,7 +2,7 @@ function v = zerodaq(signal)
 	DAQ_sampling_rate = 1000;
 	nDACout = 8;
 	Nrepeat = 0;
-	DAQid = 'PCI-6733';
+	DAQid = 'PCI-6713';
 	Vrange = [-10 10];
     channels = [0:length(signal)-1];
     
